--- a/pages/tour.html
+++ b/pages/tour.html
@@ -59,7 +59,6 @@
                                   <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
                                   <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
                                   <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
-                                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/tickets.html">Tickets</a></li>
                                 </ul>
                               </li>
                               <li class="nav-item">
@@ -84,31 +83,23 @@
         </div>
 
         <div class="container-md overflow-hidden text-center">
-            <h1 class="border border-5 border-dark"> Stage Fright is on Tour </h1>
+          <h1 class="border border-5 border-dark"> Stage Fright is on Tour </h1>
 
-            <div class="row">
-                <div class="col-md p-3 border border-dark h3"> Tickets avalible for 
-                    the Screamfest tour now! Locations under
-                </div>
+          <div class="row">
+            <div class="col-md p-3 border border-dark h3"> Tickets avalible for 
+              the Screamfest tour now! Locations under
             </div>
+          </div>
         </div>
         <div class=" d-flex container-md overflow-hidden text-center tour-container2">
             <div class="row gx-5">
                 <div class="col-md">
-<<<<<<< HEAD
                   <div class="card mx-auto"style="min-width: 300px;">
                     <div class="card-body">
                       <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Phoenix</h5></a> <br>
                       Come see Stage Fright performs their album On a Ledge in Phoneix, Arizona on June 2nd, 2025. Click for more info.
                       <br> <img src="../images/OaL-album.png" alt="logo" width="150" height="150">
                     </div>
-=======
-                  <div class="card mx-auto" style="min-width: 300px;">
-                      <div class="card-body">
-                        <a href="Tour_Subpages/phoenix.html"><h5>Phoenix</h5></a> <br>
-                        Come see Stage Fright performs their album On a Ledge in Phoneix, Arizona on June 2nd, 2025. Click for more info.
-                      </div>
->>>>>>> e24ba7b9aeedaa4e28d5cb5f28d658be90f93dbe
                   </div>
                 </div>
                 <div class="col-md">
@@ -124,11 +115,11 @@
             <div class="row gx-5">
               <div class="col-md">
                 <div class="card mx-auto" style="min-width: 300px;">
-                    <div class="card-body">
-                      <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Dallas</h5></a> <br> 
-                      Come join the show as Stage Fright performs their latest album Gone But Not Forgotten in Dallas, Texas on June 16th, 2025.
-                      Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
-                    </div>
+                  <div class="card-body">
+                    <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Dallas</h5></a> <br> 
+                    Come join the show as Stage Fright performs their latest album Gone But Not Forgotten in Dallas, Texas on June 16th, 2025.
+                    Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
+                  </div>
                 </div>
               </div>
               <div class="col-md">
@@ -163,13 +154,26 @@
             </div>
         </div>       
 
-        <script src="../js/bootstrap.bundle.js"></script>
         <footer>
-          <h3>Contact us</h3>
-          <p>Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a></p>
-          <p>Booking: <a href="booking.html">booking.html</a></p>
+          <h3>Contact Us</h3>
+          <p>
+            Through Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a>
+            <br>
+            Ticket Booking: <a href="booking.html">Here</a>
+            <br>
+            Customer Service: <a href="service.html">Here</a>
+            <br>
+            <div class="flex-container">
+              <a href="https://www.youtube.com"><img src="../images/youtube.png" alt=""></a>
+              <a href="https://www.spotify.com"><img src="../images/spotify.png" alt=""></a>
+              <a href="https://www.x.com"><img src="../images/x.png" alt=""></a>
+              <a href="https://www.instagram.com"><img src="../images/instagram.png" alt=""></a>
+            </div>
+          </p>
           <h6>Copyright &copy; 2025 Stage Fright</h6>
         </footer>
+
+        <script src="../js/bootstrap.bundle.js"></script>
     </body>
 </html>
 
