--- a/pages/Store_Subpages/Collections_Pages/col4.html
+++ b/pages/Store_Subpages/Collections_Pages/col4.html
@@ -17,7 +17,7 @@
       <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="padding-top: 1em; padding-bottom: 1em;">
         <div class="container-fluid">
             <a class="navbar-brand" href="../../../index.html">
-                <img src="../../../images/CoI.png" alt="logo" width="70" height="70">
+                <img src="../../../images/PF.png" alt="logo" width="70" height="70">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,7 +61,6 @@
                               <li><a class="dropdown-item" href="../Categories_Pages/other.html">Accessories</a></li>
                               <li><a class="dropdown-item" href="../Categories_Pages/posters.html">Posters</a></li>
                               <li><a class="dropdown-item" href="../Categories_Pages/albums.html">Albums</a></li>
-                              <li><a class="dropdown-item" href="../Categories_Pages/tickets.html">Tickets</a></li>
                             </ul>
                           </li>
                           <li class="nav-item">
@@ -110,7 +109,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/PF-album.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">PF Album</h5>
                     <p class="card-text">Listen to orange such as Laughter, Fake, and more</p>
@@ -120,12 +119,24 @@
             </div>
         </div>
 
-        <script src="../../../js/bootstrap.bundle.js"></script>
         <footer>
-          <h3>Contact us</h3>
-          <p>Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a></p>
-          <p>Booking: <a href="../../booking.html">booking.html</a></p>
+          <h3>Contact Us</h3>
+          <p>
+            Through Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a>
+            <br>
+            Ticket Booking: <a href="../../booking.html">Here</a>
+            <br>
+            Customer Service: <a href="../../service.html">Here</a>
+            <br>
+            <div class="flex-container">
+              <a href="https://www.youtube.com"><img src="../../../images/youtube.png" alt=""></a>
+              <a href="https://www.spotify.com"><img src="../../../images/spotify.png" alt=""></a>
+              <a href="https://www.x.com"><img src="../../../images/x.png" alt=""></a>
+              <a href="https://www.instagram.com"><img src="../../../images/instagram.png" alt=""></a>
+            </div>
+          </p>
           <h6>Copyright &copy; 2025 Stage Fright</h6>
         </footer>
+        <script src="../../../js/bootstrap.bundle.js"></script>
     </body>
 </html>
