--- a/pages/Store_Subpages/Collections_Pages/col6.html
+++ b/pages/Store_Subpages/Collections_Pages/col6.html
@@ -61,7 +61,6 @@
                               <li><a class="dropdown-item" href="../Categories_Pages/other.html">Accessories</a></li>
                               <li><a class="dropdown-item" href="../Categories_Pages/posters.html">Posters</a></li>
                               <li><a class="dropdown-item" href="../Categories_Pages/albums.html">Albums</a></li>
-                              <li><a class="dropdown-item" href="../Categories_Pages/tickets.html">Tickets</a></li>
                             </ul>
                           </li>
                           <li class="nav-item">
@@ -134,7 +133,7 @@
 
           <div class="col-md">
               <div class="card mx-auto" style="width: 50%;">
-                  <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                  <img src="../../../images/GBNF-album.png" class="card-img-top" alt="..." width="100" height="250">
                   <div class="card-body">
                   <h5 class="card-title">GbNF Album</h5>
                   <p class="card-text">Listen to songs such as Drowning, Megalodon, and more</p>
@@ -155,12 +154,24 @@
         </div>
       </div>
 
-        <script src="../../../js/bootstrap.bundle.js"></script>
-        <footer>
-          <h3>Contact us</h3>
-          <p>Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a></p>
-          <p>Booking: <a href="../../booking.html">booking.html</a></p>
-          <h6>Copyright &copy; 2025 Stage Fright</h6>
-        </footer>
+      <footer>
+        <h3>Contact Us</h3>
+        <p>
+          Through Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a>
+          <br>
+          Ticket Booking: <a href="../../booking.html">Here</a>
+          <br>
+          Customer Service: <a href="../../service.html">Here</a>
+          <br>
+          <div class="flex-container">
+            <a href="https://www.youtube.com"><img src="../../../images/youtube.png" alt=""></a>
+            <a href="https://www.spotify.com"><img src="../../../images/spotify.png" alt=""></a>
+            <a href="https://www.x.com"><img src="../../../images/x.png" alt=""></a>
+            <a href="https://www.instagram.com"><img src="../../../images/instagram.png" alt=""></a>
+          </div>
+        </p>
+        <h6>Copyright &copy; 2025 Stage Fright</h6>
+      </footer>
+      <script src="../../../js/bootstrap.bundle.js"></script>
     </body>
 </html>
