--- a/pages/Store_Subpages/all.html
+++ b/pages/Store_Subpages/all.html
@@ -385,7 +385,7 @@
         <div class="row">
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">GbNF Top</h5>
                     <p class="card-text">With a blue Stage Fright logo, everyone will know you love the Gone but Not Forgotten album</p>
@@ -396,7 +396,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">GbNF Hat</h5>
                     <p class="card-text">With a blue Stage Fright logo, everyone will know you love the Gone but Not Forgotten album</p>
@@ -409,7 +409,7 @@
         <div class="row">
           <div class="col-md">
             <div class="card mx-auto" style="width: 50%;">
-              <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+              <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
               <div class="card-body">
                 <h5 class="card-title">Gone but Not Forgotten Sticker</h5>
                 <p class="card-text">Show that you're part of the Scream Team with stickers based off of the Gone but Not Forgotten album</p>
@@ -420,7 +420,7 @@
 
           <div class="col-md">
               <div class="card mx-auto" style="width: 50%;">
-                  <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                  <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                   <div class="card-body">
                   <h5 class="card-title">GbNF Album</h5>
                   <p class="card-text">Listen to songs such as Drowning, Megalodon, and more</p>
