--- a/pages/tour.html
+++ b/pages/tour.html
@@ -94,15 +94,9 @@
         <div class=" d-flex container-md overflow-hidden text-center tour-container2">
             <div class="row gx-5">
                 <div class="col-md">
-                  <div class="card mx-auto"style="min-width: 300px;">
-                    <div class="card-body">
-                      <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Phoenix</h5></a> <br>
-                      Come see Stage Fright performs their album On a Ledge in Phoneix, Arizona on June 2nd, 2025. Click for more info.
-                      <br> <img src="../images/OaL-album.png" alt="logo" width="150" height="150">
-                    </div>
                   <div class="card mx-auto" style="width: 450px;">
                       <div class="card-body">
-                        <a href="Tour_Subpages/phoenix.html"><h5>Phoenix</h5></a> <br>
+                        <h5>Phoenix</h5><br>
                         Come see Stage Fright performs their album On a Ledge in Phoneix, Arizona on June 2nd, 2025. Click for more info.
                         <br> <img src="../images/OaL-album.png" alt="logo" width="150" height="150">
                         <br> <a href="booking.html" class="btn btn-primary">~$25.00 | Purchase tickets</a>
@@ -112,7 +106,7 @@
                 <div class="col-md">
                   <div class="card mx-auto" style="width: 450px;">
                     <div class="card-body">
-                      <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Detroit</h5></a> <br>
+                      <h5>Detroit</h5><br>
                       Come listen as Stage Fright sings their album Painted Face in Detroit, Michigan on June 9th, 2025. Click for more info.
                       <br> <img src="../images/PF-album.png" alt="logo" width="150" height="150">
                       <br> <a href="booking.html" class="btn btn-primary">~$25.00 | Purchase tickets</a>
@@ -124,7 +118,7 @@
               <div class="col-md">
                 <div class="card mx-auto" style="width: 450px;">
                     <div class="card-body">
-                      <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Dallas</h5></a> <br> 
+                      <h5>Dallas</h5><br> 
                       Come join the show as Stage Fright performs their latest album Gone But Not Forgotten in Dallas, Texas on June 16th, 2025.
                       Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
                       <br> <a href="booking.html" class="btn btn-primary">~$25.00 | Purchase tickets</a>
@@ -134,7 +128,7 @@
               <div class="col-md">
                 <div class="card mx-auto" style="width: 450px;">
                   <div class="card-body">
-                    <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Nashville</h5></a> <br> 
+                    <h5>Nashville</h5><br> 
                     Come and listen as Stage Fright sings their album On a Ledge In Nashville, Tennessee on June 23rd, 2025. Click for more info.
                     <br> <img src="../images/OaL-album.png" alt="logo" width="150" height="150">
                     <br> <a href="booking.html" class="btn btn-primary">~$25.00 | Purchase tickets</a>
@@ -146,7 +140,7 @@
               <div class="col-md">
                 <div class="card mx-auto"style="width: 450px;">
                   <div class="card-body">
-                    <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Seattle</h5></a> <br> 
+                    <h5>Seattle</h5><br> 
                     Come see as Stage Fright sings their album Painted Face in Seattle, Washington on June 30th, 2025. Click for more info.
                     <br> <img src="../images/PF-album.png" alt="logo" width="150" height="150">
                     <br> <a href="booking.html" class="btn btn-primary">~$25.00 | Purchase tickets</a>
@@ -156,7 +150,7 @@
               <div class="col-md">
                 <div class="card mx-auto" style="width: 450px;">
                   <div class="card-body">
-                    <a href="Store_Subpages/Categories_Pages/tickets.html"><h5>Charleston</h5></a> <br> 
+                    <h5>Charleston</h5><br> 
                     Come join as Stage Fright performs their latest album Gone But Not Forgotton in Charleston, South Carolina on July 7th, 2025. 
                     Click for more info. <br> <img src="../images/GBNF-album.png" alt="logo" width="150" height="150">
                     <br> <a href="booking.html" class="btn btn-primary">~$25.00 | Purchase tickets</a>
