--- a/pages/Store_Subpages/Categories_Pages/albums.html
+++ b/pages/Store_Subpages/Categories_Pages/albums.html
@@ -85,40 +85,43 @@
             <img src="../../../images/store.png" alt="logo" class="img-fluid logo-img">
         </div>
 
+        <br>
+
         <div class="row">
 
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/OaL-album.png" class="card-img-top" alt="..." width="100" height="250">
+          <div class="col-md">
+            <div class="card mx-auto mb-4 p-2" >
+                <img src="../../../images/OaL-album.png" class="card-img-top" alt="..." >
+                <div class="card-body">
+                    <h5 class="card-title">On a Ledge</h5>
+                    <p class="card-text">An album focusing on being on the brink of falling</p>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md">
+            <div class="card mx-auto mb-4 p-2" >
+                <img src="../../../images/PF-album.png" class="card-img-top" alt="..." >
+                <div class="card-body">
+                    <h5 class="card-title">Painted Face</h5>
+                    <p class="card-text">An album focusing on clowns and facades</p>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md">
+            <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/GBNF-album.png" class="card-img-top" alt="..." >
                     <div class="card-body">
-                        <h5 class="card-title">On a Ledge</h5>
-                        <p class="card-text">An album focusing on being on the brink of falling</p>
+                        <h5 class="card-title">Gone but Not Forgotten</h5>
+                        <p class="card-text">Listen to our latest album, lead by the hit song Memory</p>
                         <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/PF-album.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                        <h5 class="card-title">Painted Face</h5>
-                        <p class="card-text">An album focusing on clowns and facades</p>
-                        <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                        <img src="../../../images/GBNF-album.png" class="card-img-top" alt="..." width="100" height="250">
-                        <div class="card-body">
-                            <h5 class="card-title">Gone but Not Forgotten</h5>
-                            <p class="card-text">Listen to our latest album, lead by the hit song Drowning</p>
-                            <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                        </div>
-                    </div>
-                </div>
         </div>
 
         <script src="../../../js/bootstrap.bundle.js"></script>
