--- a/pages/Store_Subpages/Categories_Pages/hats.html
+++ b/pages/Store_Subpages/Categories_Pages/hats.html
@@ -85,21 +85,14 @@
           <img src="../../../images/store.png" alt="logo" class="img-fluid logo-img">
         </div>
 
+        <br>
+        <h1>Hats:</h1>
+        <br>
         <div class="row">
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Scream Team Beanie</h5>
-                    <p class="card-text">A hat for the Scream Team during winter</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
 
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/SF-hat.png" class="card-img-top" alt="..." >
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Baseball Cap</h5>
                     <p class="card-text">Go into summer rocking this Scream Team hat</p>
@@ -109,15 +102,38 @@
             </div>
 
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/OaL-hat.png" class="card-img-top" alt="..." >
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Trucker Hat</h5>
-                    <p class="card-text">Cruise down the road while representing Stage Fright</p>
+                    <h5 class="card-title">On A Ledge Baseball Cap</h5>
+                    <p class="card-text">Go into summer rocking this On A Ledge hat</p>
                     <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
+
+            <div class="col-md">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/PF-hat.png" class="card-img-top" alt="..." >
+                    <div class="card-body">
+                    <h5 class="card-title">Painted Face Baseball Cap</h5>
+                    <p class="card-text">Go into summer rocking this Painted Face hat</p>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/GBNF-hat.png" class="card-img-top" alt="..." >
+                    <div class="card-body">
+                    <h5 class="card-title">Gone But Not Forgotten Baseball Cap</h5>
+                    <p class="card-text">Go into summer rocking this Gone But Not Forgotten hat</p>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <script src="../../../js/bootstrap.bundle.js"></script>
