--- a/pages/Store_Subpages/Categories_Pages/tops.html
+++ b/pages/Store_Subpages/Categories_Pages/tops.html
@@ -85,39 +85,102 @@
           <img src="../../../images/store.png" alt="logo" class="img-fluid logo-img">
         </div>
 
+        <br>
+        <h1>Tops:</h1>
+        <br>
         <div class="row">
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2 ">
+                    <img src="../../../images/SF-tee.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Tee</h5>
-                    <p class="card-text">Simple T-shirt with a Stage Fright Logo</p>
+                    <p class="card-text">Simple T-shirt with the Stage Fright Logo</p>
                     <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2 ">
+                    <img src="../../../images/SF-hoodie.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Sweatshirt</h5>
-                    <p class="card-text">Puffy sweatshirt with a Stage Fright Logo</p>
+                    <h5 class="card-title">Scream Team Hoodie</h5>
+                    <p class="card-text">Fleece hoodie with the Stage Fright Logo</p>
                     <a href="#" class="btn btn-primary">$17.50 | Take a look</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2 ">
+                    <img src="../../../images/OaL-tee.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Hoodie</h5>
-                    <p class="card-text">Fleece hoodie with a Stage Fright Logo on the arms and front</p>
-                    <a href="#" class="btn btn-primary">$20.00 | Take a look</a>
+                    <h5 class="card-title">On A Ledge Tee</h5>
+                    <p class="card-text">Simple T-shirt with the On A Ledge Logo</p>
+                    <a href="#" class="btn btn-primary">$17.50 | Take a look</a>
                     </div>
                 </div>
             </div>
+
+            <div class="col-md">
+                <div class="card mx-auto mb-4 p-2 ">
+                    <img src="../../../images/OaL-hoodie.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">On A Ledge Hoodie</h5>
+                    <p class="card-text">Fleece hoodie with the On A Ledge logo</p>
+                    <a href="#" class="btn btn-primary">$17.50 | Take a look</a>
+                    </div>
+                </div>
+            </div>
+        
+        </div>
+
+        <div class="row">
+
+            <div class="col-md">
+                <div class="card mx-auto mb-4 p-2 ">
+                    <img src="../../../images/PF-tee.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Painted Face Tee</h5>
+                    <p class="card-text">Simple T-shirt with the painted face Logo</p>
+                    <a href="#" class="btn btn-primary">$17.50 | Take a look</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md">
+                <div class="card mx-auto mb-4 p-2 ">
+                    <img src="../../../images/PF-hoodie.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Painted Face Hoodie</h5>
+                    <p class="card-text">Fleece hoodie with the Painted Face logo</p>
+                    <a href="#" class="btn btn-primary">$17.50 | Take a look</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md">
+                <div class="card mx-auto mb-4 p-2 ">
+                    <img src="../../../images/GBNF-tee.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Gone But Not Forgotten Tee</h5>
+                    <p class="card-text">Simple T-shirt with the Gone But Not Forgotten Logo</p>
+                    <a href="#" class="btn btn-primary">$17.50 | Take a look</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md">
+                <div class="card mx-auto mb-4 p-2 ">
+                    <img src="../../../images/GBNF-hoodie.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Gone But Not Forgotten Hoodie</h5>
+                    <p class="card-text">Fleece hoodie with the Gone But Not Forgotten logo</p>
+                    <a href="#" class="btn btn-primary">$17.50 | Take a look</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <script src="../../../js/bootstrap.bundle.js"></script>
