--- a/pages/Store_Subpages/Collections_Pages/col2.html
+++ b/pages/Store_Subpages/Collections_Pages/col2.html
@@ -85,12 +85,15 @@
           <img src="../../../images/store.png" alt="logo" class="img-fluid logo-img">
         </div>
 
+        <br>
+        <h1>On A Ledge Collection:</h1>
+        <br>
         <div class="row">
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/OaL-tee.png" class="card-img-top" alt="..." >
                     <div class="card-body">
-                    <h5 class="card-title">OaL Top</h5>
+                    <h5 class="card-title">On A Ledge Tee</h5>
                     <p class="card-text">With a red Stage Fright logo, everyone will know you love the On a Ledge album</p>
                     <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
                     </div>
@@ -98,10 +101,10 @@
             </div>
 
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/OaL-hat.png" class="card-img-top" alt="..." >
                     <div class="card-body">
-                    <h5 class="card-title">OaL Hats</h5>
+                    <h5 class="card-title">On A Ledge Hat</h5>
                     <p class="card-text">With a red Stage Fright logo, everyone will know you love the On a Ledge album</p>
                     <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
@@ -109,15 +112,27 @@
             </div>
 
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/OaL-sticker.png" class="card-img-top" alt="..." >
                     <div class="card-body">
-                    <h5 class="card-title">OaL Album</h5>
+                    <h5 class="card-title">On a Ledge Sticker</h5>
+                    <p class="card-text">Show that you're part of the Scream Team with a sticker with the On A Ledge logo</p>
+                    <a href="#" class="btn btn-primary">$5.00 | Take a look</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/OaL-album.png" class="card-img-top" alt="..." >
+                    <div class="card-body">
+                    <h5 class="card-title">On A Ledge Album</h5>
                     <p class="card-text">Listen to songs such as The Leap, Impact, and more</p>
                     <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
+
         </div>
 
         <script src="../../../js/bootstrap.bundle.js"></script>
