--- a/index.html
+++ b/index.html
@@ -222,13 +222,25 @@
         </div>
       </div>
 
-      <script src="js/bootstrap.bundle.js"></script>
       <footer>
-        <h3>Contact us</h3>
-        <p>Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a></p>
-        <p>Booking: <a href="pages/booking.html">booking.html</a></p>
+        <h3>Contact Us</h3>
+        <p>
+          Through Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a>
+          <br>
+          Ticket Booking: <a href="booking.html">Here</a>
+          <br>
+          Customer Service: <a href="service.html">Here</a>
+          <br>
+          <div class="flex-container">
+            <a href="https://www.youtube.com"><img src="images/youtube.png" alt=""></a>
+            <a href="https://www.spotify.com"><img src="images/spotify.png" alt=""></a>
+            <a href="https://www.x.com"><img src="images/x.png" alt=""></a>
+            <a href="https://www.instagram.com"><img src="images/instagram.png" alt=""></a>
+          </div>
+        </p>
         <h6>Copyright &copy; 2025 Stage Fright</h6>
       </footer>
+      <script src="js/bootstrap.bundle.js"></script>
     </body>
 </html>
 
