--- a/pages/Store_Subpages/Collections_Pages/col4.html
+++ b/pages/Store_Subpages/Collections_Pages/col4.html
@@ -85,12 +85,15 @@
           <img src="../../../images/store.png" alt="logo" class="img-fluid logo-img">
         </div>
 
+        <br>
+        <h1>Painted Face Collection:</h1>
+        <br>
         <div class="row">
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/PF-tee.png" class="card-img-top" alt="..." >
                     <div class="card-body">
-                    <h5 class="card-title">PF Top</h5>
+                    <h5 class="card-title">Painted Face Top</h5>
                     <p class="card-text">With a orange Stage Fright logo, everyone will know you love the Painted Face album</p>
                     <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
                     </div>
@@ -98,10 +101,10 @@
             </div>
 
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/PF-hat.png" class="card-img-top" alt="..." >
                     <div class="card-body">
-                    <h5 class="card-title">PF Hats</h5>
+                    <h5 class="card-title">Painted Face Hat</h5>
                     <p class="card-text">With a orange Stage Fright logo, everyone will know you love the Painted Face album</p>
                     <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
@@ -109,15 +112,27 @@
             </div>
 
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/PF-sticker.png" class="card-img-top" alt="..." >
                     <div class="card-body">
-                    <h5 class="card-title">PF Album</h5>
+                    <h5 class="card-title">Painted Face Sticker</h5>
+                    <p class="card-text">Show that you're part of the Scream Team with a sticker with the Painted Face logo</p>
+                    <a href="#" class="btn btn-primary">$5.00 | Take a look</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/PF-album.png" class="card-img-top" alt="..." >
+                    <div class="card-body">
+                    <h5 class="card-title">Painted Face Album</h5>
                     <p class="card-text">Listen to orange such as Laughter, Fake, and more</p>
                     <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
+
         </div>
 
         <script src="../../../js/bootstrap.bundle.js"></script>
