--- a/pages/Store_Subpages/Collections_Pages/col6.html
+++ b/pages/Store_Subpages/Collections_Pages/col6.html
@@ -85,12 +85,15 @@
           <img src="../../../images/store.png" alt="logo" class="img-fluid logo-img">
         </div>
 
+        <br>
+        <h1>Gone But Not Forgotten Collection:</h1>
+        <br>
         <div class="row">
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/GBNF-tee.png" class="card-img-top" alt="..." >
                     <div class="card-body">
-                    <h5 class="card-title">GbNF Top</h5>
+                    <h5 class="card-title">Gone But Not Forgotten Top</h5>
                     <p class="card-text">With a blue Stage Fright logo, everyone will know you love the Gone but Not Forgotten album</p>
                     <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
                     </div>
@@ -98,10 +101,10 @@
             </div>
 
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/GBNF-hat.png" class="card-img-top" alt="..." >
                     <div class="card-body">
-                    <h5 class="card-title">GbNF Hat</h5>
+                    <h5 class="card-title">Gone But Not Forgotten Hat</h5>
                     <p class="card-text">With a blue Stage Fright logo, everyone will know you love the Gone but Not Forgotten album</p>
                     <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
@@ -109,51 +112,29 @@
             </div>
 
             <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/GbNF-sticker.png" class="card-img-top" alt="..." >
                     <div class="card-body">
-                    <h5 class="card-title">GbNF Sticker Pack</h5>
-                    <p class="card-text">Show that you're part of the Scream Team with stickers based off of the Gone but Not Forgotten album</p>
+                    <h5 class="card-title">Gone But Not Forgotten Sticker</h5>
+                    <p class="card-text">Show that you're part of the Scream Team with a sticker with the GBNF logo</p>
                     <a href="#" class="btn btn-primary">$5.00 | Take a look</a>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="row">
-          <div class="col-md">
-              <div class="card mx-auto" style="width: 50%;">
-                  <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                  <div class="card-body">
-                  <h5 class="card-title">GbNF Poster</h5>
-                  <p class="card-text">Hang up a poster of the Stage Fright Band rocking all blue</p>
-                  <a href="#" class="btn btn-primary">$7.50 | Take a look</a>
-                  </div>
-              </div>
-          </div>
-
-          <div class="col-md">
-              <div class="card mx-auto" style="width: 50%;">
-                  <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                  <div class="card-body">
-                  <h5 class="card-title">GbNF Album</h5>
-                  <p class="card-text">Listen to songs such as Drowning, Megalodon, and more</p>
-                  <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                  </div>
-              </div>
-          </div>
-
-          <div class="col-md">
-            <div class="card mx-auto" style="width: 50%;">
-                <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                <div class="card-body">
-                <h5 class="card-title">Show 6: GbNF Ticket</h5>
-                <p class="card-text">Come to see Stage Fright perform the full Gone but Not Forgotten album at the final show of their celebration tour</p>
-                <a href="../../booking.html" class="btn btn-primary">~$25.00 | Take a look</a>
+            <div class="col-md">
+                <div class="card mx-auto mb-4 p-2" >
+                    <img src="../../../images/GBNF-album.png" class="card-img-top" alt="..." >
+                    <div class="card-body">
+                    <h5 class="card-title">GbNF Album</h5>
+                    <p class="card-text">Listen to songs such as Memory, Shadow, and more</p>
+                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                    </div>
                 </div>
             </div>
+
         </div>
-      </div>
+
 
         <script src="../../../js/bootstrap.bundle.js"></script>
         <footer>
