--- a/pages/music.html
+++ b/pages/music.html
@@ -116,7 +116,7 @@
               </div>
             </div>
             <div class="card-footer text-body-secondary">
-              January 2025 to March 2025
+              November 2024 to February 2025
             </div>
           </div>
 
@@ -135,7 +135,7 @@
                 <img src="../images/OaL-album.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">On a Ledge</h5>
-                  <p class="card-text">Our first album, created in August 2024!</p>
+                  <p class="card-text">Our first album, created in August 2022! This album demonstrates the classic fear of heights, leading to On a Ledge! The album was released on December 2022. </p>
                   <a href="../pages/Store_Subpages/Collections_Pages/col2.html" class="btn btn-primary">Album Merchandise</a>
                 </div>
               </div>
@@ -146,7 +146,7 @@
                 <img src="../images/PF-album.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Carnival of Insanity</h5>
-                  <p class="card-text">Our second album, created after On a Ledge on October 2024!</p>
+                  <p class="card-text">Our second album, created after On a Ledge on February 2023! The album was released on October 2023.</p>
                   <a href="../pages/Store_Subpages/Collections_Pages/col4.html" class="btn btn-primary">Album Merchandise</a>
                 </div>
               </div>
@@ -157,7 +157,7 @@
                   <img src="../images/GBNF-album.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Gone But Not Forgotten</h5>
-                    <p class="card-text">This is the third and our most recent album. We started making this in December 2024! Check it out!</p>
+                    <p class="card-text">This is the third and our most recent album. We started making this in December 2023! The album was released on November 2024. Check it out!</p>
                     <a href="../pages/Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Album Merchandise</a>
                   </div>
                 </div>
@@ -175,10 +175,10 @@
             Customer Service: <a href="service.html">Here</a>
             <br>
             <div class="flex-container">
-              <a href="https://www.youtube.com"><img src="../images/youtube.png" alt=""></a>
+              <a href="https://www.youtube.com/@bpa-stage-fright"><img src="../images/youtube.png" alt=""></a>
               <a href="https://www.spotify.com"><img src="../images/spotify.png" alt=""></a>
               <a href="https://www.x.com"><img src="../images/x.png" alt=""></a>
-              <a href="https://www.instagram.com"><img src="../images/instagram.png" alt=""></a>
+              <a href="https://www.instagram.com/bpastagefright/"><img src="../images/instagram.png" alt=""></a>
             </div>
           </p>
           <h6>Copyright &copy; 2025 Stage Fright</h6>
