finished home page

--- a/index.html
+++ b/index.html
@@ -109,39 +109,21 @@
             <div id="storeCarousel" class="carousel slide carousel-fade">
               <div class="carousel-inner">
                 <div class="carousel-item active c-item">
-                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                  <img src="images/SF-tee.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Tops</h5>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
-                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                  <img src="images/SF-hat.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Hats</h5>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
-                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5 class="text-primary">Accessories</h5>
-                  </div>
-                </div>
-                <div class="carousel-item c-item">
-                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5 class="text-primary">Posters</h5>
-                  </div>
-                </div>
-                <div class="carousel-item c-item">
-                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                  <img src="images/GBNF-album.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Albums</h5>
-                  </div>
-                </div>
-                <div class="carousel-item c-item">
-                  <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5 class="text-primary">Tickets</h5>
                   </div>
                 </div>
               </div>
@@ -220,6 +202,45 @@
             </p>
           </div>
         </div>
+        <div class="row py-3">
+          <div class="col">
+            <h3>About The Members</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <p>
+              <b>Alec Thornstrum:</b>
+              <br>
+              The lead singer of the band, likes the color purple, knows how to play the fiddle.
+              <br>
+              <br>
+              <b>Blake Jhonson:</b>
+              <br>
+              Lead Guitarist, Likes the color orange, wonderful baker.
+              <br>
+              <br>
+              <b>Nyx Blair:</b>
+              <br>
+              Bassist, Likes the color blue, loves to paint occasionally.
+              <br>
+              <br>
+              <b>Jack "Stix" Borne:</b>
+              <br>
+              Drummer, Likes the color green, does gymnastics.
+              <br>
+              <br>
+              <b>Hecter Jones</b>
+              <br>
+              PLays the keyboard, Likes the color pink, classical composer
+              .
+              <br>
+              <br>
+
+            </p>
+          </div>
+        </div>
+        </div>
       </div>
 
       <footer>
@@ -231,13 +252,13 @@
           <br>
           Customer Service: <a href="service.html">Here</a>
           <br>
+        </p>
           <div class="flex-container">
             <a href="https://www.youtube.com"><img src="images/youtube.png" alt=""></a>
             <a href="https://www.spotify.com"><img src="images/spotify.png" alt=""></a>
             <a href="https://www.x.com"><img src="images/x.png" alt=""></a>
             <a href="https://www.instagram.com"><img src="images/instagram.png" alt=""></a>
           </div>
-        </p>
         <h6>Copyright &copy; 2025 Stage Fright</h6>
       </footer>
       <script src="js/bootstrap.bundle.js"></script>
