--- a/pages/music.html
+++ b/pages/music.html
@@ -174,10 +174,10 @@
             <br>
           </p>
             <div class="flex-container">
-              <a href="https://www.youtube.com/@bpa-stage-fright"><img src="../images/youtube.png" alt=""></a>
+              <a href="https://www.youtube.com"><img src="../images/youtube.png" alt=""></a>
               <a href="https://www.spotify.com"><img src="../images/spotify.png" alt=""></a>
               <a href="https://www.x.com"><img src="../images/x.png" alt=""></a>
-              <a href="https://www.instagram.com/bpastagefright/"><img src="../images/instagram.png" alt=""></a>
+              <a href="https://www.instagram.com"><img src="../images/instagram.png" alt=""></a>
             </div>
           <h6>Copyright &copy; 2025 Stage Fright</h6>
         </footer>
