--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
                                 <ul class="dropdown-menu store-menu">
                                   <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/tops.html">Tops</a></li>
                                   <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/hats.html">Hats</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
                                   <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
                                 </ul>
                               </li>
@@ -149,7 +147,7 @@
         <div class="row">
           <div class="col">
             <div class="card mx-auto mb-4 p-2" style="width: 50%;">
-              <img src="images/" class="card-img-top" alt="...">
+              <img src="images/scream-fest.png" class="card-img-top" alt="...">
               <div class="card-body">
               <h5 class="card-title">Scream Fest North America Tour</h5>
               <p class="card-text">This year marks the 4th annual "Scream Fest" North America tour.
