Hopefully Final Push

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <img src="images/scream-fest.png" class="card-img-top" alt="...">
               <div class="card-body">
               <h5 class="card-title">Scream Fest North America Tour</h5>
-              <p class="card-text">This year marks the 4th annual "Scream Fest" North America tour.
+              <p class="card-text">This year marks the 2nd annual "Scream Fest" North America tour.
                 Stage Fright will be traveling all across the U.S. from Detroid MI, to Phoenix AZ.
                 If you'd like to join in on the fun, find your city below and purchase a ticket!
               </p>
@@ -195,7 +195,7 @@
               has been said to be Stage Fright's most experimental album. Their unique use of reverse sound effects, 
               classical instruments, and haunting vocal sound effects, GBNF has been almost collectively agreed to be Stage Fright's 
               most in-depth album. This album alone won Stage Fright 3 grammies, and over 900,000 mothly listeners. Now us Stage Fright
-              Fenatics can only wait for Stage Fright's newest release and see what they have in store.
+              Fanatics can only wait for Stage Fright's newest release and see what they have in store.
             </p>
           </div>
         </div>
@@ -229,7 +229,7 @@
               <br>
               <b>Hecter Jones</b>
               <br>
-              PLays the keyboard, Likes the color pink, classical composer
+              Plays the keyboard, Likes the color pink, classical composer
               .
               <br>
               <br>
@@ -241,12 +241,14 @@
 
       <footer>
         <h3>Contact Us</h3>
+        <br>
         <p>
           Through Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a>
           <br>
           Ticket Booking: <a href="pages/booking.html">Here</a>
           <br>
           Customer Service: <a href="pages/service.html">Here</a>
+          <br>
           <br>
         </p>
           <div class="flex-container">
@@ -255,6 +257,8 @@
             <a href="https://www.x.com"><img src="images/x.png" alt=""></a>
             <a href="https://www.instagram.com"><img src="images/instagram.png" alt=""></a>
           </div>
+          <br>
+          <br>
         <h6>Copyright &copy; 2025 Stage Fright</h6>
       </footer>
       <script src="js/bootstrap.bundle.js"></script>
