--- a/pages/music.html
+++ b/pages/music.html
@@ -140,7 +140,7 @@
               <div class="card h-100 p-2">
                 <img src="../images/PF-album.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Carnival of Insanity</h5>
+                  <h5 class="card-title">Painted Face</h5>
                   <p class="card-text">Our second album, created after On a Ledge on February 2023! The album was released on October 2023.</p>
                   <a href="../pages/Store_Subpages/Collections_Pages/col4.html" class="btn btn-primary">Album Merchandise</a>
                 </div>
@@ -161,12 +161,14 @@
         </div>  
         <footer>
           <h3>Contact Us</h3>
+          <br>
           <p>
             Through Email: <a href="mailto:stagefright956@gmail.com">stagefright956@gmail.com</a>
             <br>
             Ticket Booking: <a href="booking.html">Here</a>
             <br>
             Customer Service: <a href="service.html">Here</a>
+            <br>
             <br>
           </p>
             <div class="flex-container">
@@ -175,6 +177,8 @@
               <a href="https://www.x.com"><img src="../images/x.png" alt=""></a>
               <a href="https://www.instagram.com"><img src="../images/instagram.png" alt=""></a>
             </div>
+            <br>
+            <br>
           <h6>Copyright &copy; 2025 Stage Fright</h6>
         </footer>
         <script src="../js/bootstrap.bundle.js"></script>
